Fixed the parallel run for sites x train_valid_splits; fixed the params.json according to the new structure

--- a/notebooks/nb-generate-competition-forecast.ipynb
+++ b/notebooks/nb-generate-competition-forecast.ipynb
@@ -18,80 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "params_path = '../params/params_eem2020_wind_example.json'\n",
-    "with open(params_path, 'r', encoding='utf-8') as file:\n",
-    "    params_json = json.loads(file.read())"
+    "preprocessed_path = '../data/eem20/preprocessed/eem2020-preprocessed.csv'\n",
+    "output_path = './submission-0.csv'\n",
+    "trial_name = 'trial0'\n",
+    "model = 'lightgbm'\n",
+    "split_name = 'valid'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'trial_name': 'trial0',\n",
-       " 'trial_comment': 'test',\n",
-       " 'path_result': './result/eem20/',\n",
-       " 'path_raw_data': './data/eem20/',\n",
-       " 'filename_raw_data': 'eem2020-raw.csv',\n",
-       " 'path_preprocessed_data': './data/eem20/preprocessed/',\n",
-       " 'filename_preprocessed_data': 'eem2020-preprocessed.csv',\n",
-       " 'data_resolution': '60min',\n",
-       " 'splits': {'train': [['2000-01-01 01:00:00', '2000-10-01 00:00:00']],\n",
-       "  'valid': [['2000-11-01 01:00:00', '2000-12-31 00:00:00']]},\n",
-       " 'sites': ['SE1', 'SE2', 'SE3', 'SE4'],\n",
-       " 'features': ['WindSpeed_1',\n",
-       "  'WindSpeed_2',\n",
-       "  'WindSpeed_3',\n",
-       "  'WindSpeed_4',\n",
-       "  'WindDirection_1',\n",
-       "  'WindDirection_2',\n",
-       "  'WindDirection_3',\n",
-       "  'WindDirection_4'],\n",
-       " 'target': 'Power',\n",
-       " 'diff_target_with_physical': False,\n",
-       " 'target_smoothing_window': 1,\n",
-       " 'regression_params': {'type': ['quantile'],\n",
-       "  'alpha_range': [0.01, 1.0, 0.01],\n",
-       "  'quantile_postprocess': 'sorting',\n",
-       "  'target_min_max': [0, 1000]},\n",
-       " 'model_params': {'lightgbm': {'learning_rate': 0.1,\n",
-       "   'num_trees': 20,\n",
-       "   'boosting': 'gbdt',\n",
-       "   'max_leaves': 32,\n",
-       "   'max_depth': 10,\n",
-       "   'min_data_in_leaf': 20,\n",
-       "   'max_bin': 30,\n",
-       "   'bagging_fraction': 1,\n",
-       "   'bagging_freq': 0,\n",
-       "   'feature_fraction': 1,\n",
-       "   'early_stopping': 5,\n",
-       "   'lambda_l1': 0.0,\n",
-       "   'lambda_l2': 0.0,\n",
-       "   'verbose': -1,\n",
-       "   'num_threads': 1}},\n",
-       " 'weight_params': {'weight_end': 0.5, 'weight_shape': 80},\n",
-       " 'save_options': {'data': False,\n",
-       "  'prediction': False,\n",
-       "  'model': True,\n",
-       "  'evals': False,\n",
-       "  'loss': True,\n",
-       "  'overall_score': True}}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "params_json"
+    "with open(params_path, 'r', encoding='utf-8') as file:\n",
+    "    params_json = json.loads(file.read())"
    ]
   },
   {
@@ -100,9 +46,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trial_name = 'trial0'\n",
-    "model = 'lightgbm'\n",
-    "\n",
     "sites = range(len(params_json['sites']))\n",
     "splits = range(len(params_json['splits']['valid']))\n",
     "alpha_q = np.arange(params_json['regression_params']['alpha_range'][0],\n",
@@ -177,18 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_pred = pd.concat(dfs_y_pred[model][0], axis=1)\n",
     "df_pred.columns = [f'SE{site_id+1}_quantile{q_id+1}' for q_id in range(len(dfs_y_pred[model][0][0].columns)) for site_id in sites]\n",
-    "df_pred.droplevel(level=0, axis=0)"
+    "df_pred = df_pred.droplevel(level=0, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +163,6 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th>SE1_quantile1</th>\n",
        "      <th>SE2_quantile1</th>\n",
@@ -245,7 +187,6 @@
        "      <th>SE4_quantile99</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ref_datetime</th>\n",
        "      <th>valid_datetime</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -272,7 +213,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td rowspan=\"5\" valign=\"top\">2000-01-02</td>\n",
        "      <td>2000-01-02 00:00:00</td>\n",
        "      <td>2.625833</td>\n",
        "      <td>8.032666</td>\n",
@@ -398,82 +338,66 @@
        "</div>"
       ],
       "text/plain": [
-       "                                  SE1_quantile1  SE2_quantile1  SE3_quantile1  \\\n",
-       "ref_datetime valid_datetime                                                     \n",
-       "2000-01-02   2000-01-02 00:00:00       2.625833       8.032666      10.299038   \n",
-       "             2000-01-02 01:00:00       2.625833       7.494488      10.299038   \n",
-       "             2000-01-02 02:00:00       2.625833       8.032666      10.546276   \n",
-       "             2000-01-02 03:00:00       2.625833       8.032666      10.546276   \n",
-       "             2000-01-02 04:00:00       2.625833       7.494488      10.546276   \n",
+       "                     SE1_quantile1  SE2_quantile1  SE3_quantile1  \\\n",
+       "valid_datetime                                                     \n",
+       "2000-01-02 00:00:00       2.625833       8.032666      10.299038   \n",
+       "2000-01-02 01:00:00       2.625833       7.494488      10.299038   \n",
+       "2000-01-02 02:00:00       2.625833       8.032666      10.546276   \n",
+       "2000-01-02 03:00:00       2.625833       8.032666      10.546276   \n",
+       "2000-01-02 04:00:00       2.625833       7.494488      10.546276   \n",
        "\n",
-       "                                  SE4_quantile1  SE1_quantile2  SE2_quantile2  \\\n",
-       "ref_datetime valid_datetime                                                     \n",
-       "2000-01-02   2000-01-02 00:00:00      13.524069      15.488036      17.436348   \n",
-       "             2000-01-02 01:00:00      13.524069      15.488036      17.849544   \n",
-       "             2000-01-02 02:00:00      13.524069      15.457736      18.021248   \n",
-       "             2000-01-02 03:00:00      13.657336      15.116212      17.658164   \n",
-       "             2000-01-02 04:00:00      13.657336      15.116212      17.283963   \n",
+       "                     SE4_quantile1  SE1_quantile2  SE2_quantile2  \\\n",
+       "valid_datetime                                                     \n",
+       "2000-01-02 00:00:00      13.524069      15.488036      17.436348   \n",
+       "2000-01-02 01:00:00      13.524069      15.488036      17.849544   \n",
+       "2000-01-02 02:00:00      13.524069      15.457736      18.021248   \n",
+       "2000-01-02 03:00:00      13.657336      15.116212      17.658164   \n",
+       "2000-01-02 04:00:00      13.657336      15.116212      17.283963   \n",
        "\n",
-       "                                  SE3_quantile2  SE4_quantile2  SE1_quantile3  \\\n",
-       "ref_datetime valid_datetime                                                     \n",
-       "2000-01-02   2000-01-02 00:00:00      19.230108      20.182856      22.811934   \n",
-       "             2000-01-02 01:00:00      19.230108      20.182856      21.949742   \n",
-       "             2000-01-02 02:00:00      19.230108      20.407110      22.678376   \n",
-       "             2000-01-02 03:00:00      19.041101      21.853178      22.524370   \n",
-       "             2000-01-02 04:00:00      19.041101      22.028306      22.207718   \n",
+       "                     SE3_quantile2  SE4_quantile2  SE1_quantile3  \\\n",
+       "valid_datetime                                                     \n",
+       "2000-01-02 00:00:00      19.230108      20.182856      22.811934   \n",
+       "2000-01-02 01:00:00      19.230108      20.182856      21.949742   \n",
+       "2000-01-02 02:00:00      19.230108      20.407110      22.678376   \n",
+       "2000-01-02 03:00:00      19.041101      21.853178      22.524370   \n",
+       "2000-01-02 04:00:00      19.041101      22.028306      22.207718   \n",
        "\n",
-       "                                  SE2_quantile3  ...  SE3_quantile97  \\\n",
-       "ref_datetime valid_datetime                      ...                   \n",
-       "2000-01-02   2000-01-02 00:00:00      25.310804  ...     1000.000000   \n",
-       "             2000-01-02 01:00:00      22.811934  ...     1000.000000   \n",
-       "             2000-01-02 02:00:00      22.811934  ...      976.472435   \n",
-       "             2000-01-02 03:00:00      22.737912  ...      949.377620   \n",
-       "             2000-01-02 04:00:00      22.292007  ...      966.215947   \n",
+       "                     SE2_quantile3  ...  SE3_quantile97  SE4_quantile97  \\\n",
+       "valid_datetime                      ...                                   \n",
+       "2000-01-02 00:00:00      25.310804  ...     1000.000000     1000.000000   \n",
+       "2000-01-02 01:00:00      22.811934  ...     1000.000000     1000.000000   \n",
+       "2000-01-02 02:00:00      22.811934  ...      976.472435     1000.000000   \n",
+       "2000-01-02 03:00:00      22.737912  ...      949.377620      968.851326   \n",
+       "2000-01-02 04:00:00      22.292007  ...      966.215947      972.412788   \n",
        "\n",
-       "                                  SE4_quantile97  SE1_quantile98  \\\n",
-       "ref_datetime valid_datetime                                        \n",
-       "2000-01-02   2000-01-02 00:00:00     1000.000000     1000.000000   \n",
-       "             2000-01-02 01:00:00     1000.000000     1000.000000   \n",
-       "             2000-01-02 02:00:00     1000.000000     1000.000000   \n",
-       "             2000-01-02 03:00:00      968.851326      972.809635   \n",
-       "             2000-01-02 04:00:00      972.412788      992.959460   \n",
+       "                     SE1_quantile98  SE2_quantile98  SE3_quantile98  \\\n",
+       "valid_datetime                                                        \n",
+       "2000-01-02 00:00:00     1000.000000     1000.000000          1000.0   \n",
+       "2000-01-02 01:00:00     1000.000000     1000.000000          1000.0   \n",
+       "2000-01-02 02:00:00     1000.000000     1000.000000          1000.0   \n",
+       "2000-01-02 03:00:00      972.809635      993.581721          1000.0   \n",
+       "2000-01-02 04:00:00      992.959460     1000.000000          1000.0   \n",
        "\n",
-       "                                  SE2_quantile98  SE3_quantile98  \\\n",
-       "ref_datetime valid_datetime                                        \n",
-       "2000-01-02   2000-01-02 00:00:00     1000.000000          1000.0   \n",
-       "             2000-01-02 01:00:00     1000.000000          1000.0   \n",
-       "             2000-01-02 02:00:00     1000.000000          1000.0   \n",
-       "             2000-01-02 03:00:00      993.581721          1000.0   \n",
-       "             2000-01-02 04:00:00     1000.000000          1000.0   \n",
+       "                     SE4_quantile98  SE1_quantile99  SE2_quantile99  \\\n",
+       "valid_datetime                                                        \n",
+       "2000-01-02 00:00:00          1000.0          1000.0          1000.0   \n",
+       "2000-01-02 01:00:00          1000.0          1000.0          1000.0   \n",
+       "2000-01-02 02:00:00          1000.0          1000.0          1000.0   \n",
+       "2000-01-02 03:00:00          1000.0          1000.0          1000.0   \n",
+       "2000-01-02 04:00:00          1000.0          1000.0          1000.0   \n",
        "\n",
-       "                                  SE4_quantile98  SE1_quantile99  \\\n",
-       "ref_datetime valid_datetime                                        \n",
-       "2000-01-02   2000-01-02 00:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 01:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 02:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 03:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 04:00:00          1000.0          1000.0   \n",
-       "\n",
-       "                                  SE2_quantile99  SE3_quantile99  \\\n",
-       "ref_datetime valid_datetime                                        \n",
-       "2000-01-02   2000-01-02 00:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 01:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 02:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 03:00:00          1000.0          1000.0   \n",
-       "             2000-01-02 04:00:00          1000.0          1000.0   \n",
-       "\n",
-       "                                  SE4_quantile99  \n",
-       "ref_datetime valid_datetime                       \n",
-       "2000-01-02   2000-01-02 00:00:00          1000.0  \n",
-       "             2000-01-02 01:00:00          1000.0  \n",
-       "             2000-01-02 02:00:00          1000.0  \n",
-       "             2000-01-02 03:00:00          1000.0  \n",
-       "             2000-01-02 04:00:00          1000.0  \n",
+       "                     SE3_quantile99  SE4_quantile99  \n",
+       "valid_datetime                                       \n",
+       "2000-01-02 00:00:00          1000.0          1000.0  \n",
+       "2000-01-02 01:00:00          1000.0          1000.0  \n",
+       "2000-01-02 02:00:00          1000.0          1000.0  \n",
+       "2000-01-02 03:00:00          1000.0          1000.0  \n",
+       "2000-01-02 04:00:00          1000.0          1000.0  \n",
        "\n",
        "[5 rows x 396 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
