Update lighgbm speed benchmark notebook.

--- a/notebooks/work_in_progress/nb-lightgbm-train-vs-fit.ipynb
+++ b/notebooks/work_in_progress/nb-lightgbm-train-vs-fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,13 @@
     "      \"lambda_l2\": 0.001,\n",
     "      \"min_child_weight\": 1e-3, \n",
     "      \"alpha\": 0.5,\n",
-    "      \"max_bin\": 30}"
+    "      \"max_bin\": 30,\n",
+    "      \"n_jobs\":4}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +64,12 @@
     "                          reg_lambda=model_params.get('lambda_l2', 0.0), \n",
     "                          min_sum_hessian_in_leaf=model_params.get(\"min_child_weightt\"),\n",
     "                          random_state=111,\n",
-    "                          **{'max_bin': model_params['max_bin']})  "
+    "                          **{'max_bin': model_params['max_bin'], 'n_jobs': model_params['n_jobs']})  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.34632396697998\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fit\n",
     "t0 = time.time()\n",
@@ -105,25 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/envs/gbdt-forecast/lib/python3.8/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_trees` in params. Will use it instead of argument\n",
-      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.06002402305603\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train\n",
     "train_set = lightgbm.Dataset(X_train, label=y_train, free_raw_data=False)\n",
@@ -135,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 255,
    "metadata": {
     "scrolled": false
    },
@@ -177,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "Scikit-learn API results\n",
-      "3.45671010017395\n",
+      "2.437354803085327\n",
       "Native API results\n"
      ]
     },
@@ -195,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.47628378868103\n",
+      "2.773380994796753\n",
       "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
