--- a/notebooks/work_in_progress/nb-lightgbm-train-vs-fit.ipynb
+++ b/notebooks/work_in_progress/nb-lightgbm-train-vs-fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.408535242080688\n"
+     ]
+    }
+   ],
    "source": [
     "# fit\n",
     "t0 = time.time()\n",
@@ -98,12 +106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/envs/gbdt-forecast/lib/python3.8/site-packages/lightgbm/engine.py:148: UserWarning: Found `num_trees` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.309860944747925\n"
+     ]
+    }
+   ],
    "source": [
     "# train\n",
-    "train_set = lightgbm.Dataset(X_train, label=y_train, free_raw_data=False)\n",
+    "train_set = lightgbm.Dataset(X_train, label=y_train)\n",
     "t0 = time.time()\n",
     "for _ in range(500):\n",
     "    gbm = lightgbm.train(model_params, train_set)\n",
@@ -112,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
